Compile on startup so shamrock:dev works on a clean project