@@ -49,6 +49,9 @@ public class DevMojo extends AbstractMojo {
 
     private static final String RESOURCES_PROP = "shamrock.undertow.resources";
 
+    private static final String LOGGING_ARTIFACT = "shamrock-logging-deployment";
+    private static final String LOGGING_GROUP = "org.jboss.shamrock";
+
     /**
      * The directory for compiled classes.
      */
@@ -107,11 +110,18 @@ public class DevMojo extends AbstractMojo {
             //build a class-path string for the base platform
             //this stuff does not change
             StringBuilder classPath = new StringBuilder();
+            boolean logmanager = false;
             for (Artifact artifact : project.getArtifacts()) {
                 classPath.append(artifact.getFile().getAbsolutePath());
                 classPath.append(" ");
+                if(artifact.getArtifactId().equals(LOGGING_ARTIFACT) &&
+                        artifact.getGroupId().equals(LOGGING_GROUP)) {
+                    logmanager = true;
+                }
             }
-            args.add("-Djava.util.logging.manager=org.jboss.logmanager.LogManager");
+            if(logmanager) {
+                args.add("-Djava.util.logging.manager=org.jboss.logmanager.LogManager");
+            }
             File wiringClassesDirectory = Files.createTempDirectory("wiring-classes").toFile();
             wiringClassesDirectory.deleteOnExit();
 
@@ -183,14 +193,12 @@ public class DevMojo extends AbstractMojo {
             args.add(outputDirectory.getAbsolutePath());
             args.add(wiringClassesDirectory.getAbsolutePath());
             args.add(new File(buildDir, "transformer-cache").getAbsolutePath());
-            ProcessBuilder pb = new ProcessBuilder(args.toArray(new String[0]));
-            pb.redirectError(ProcessBuilder.Redirect.INHERIT);
-            pb.redirectOutput(ProcessBuilder.Redirect.INHERIT);
-            pb.redirectInput(ProcessBuilder.Redirect.INHERIT);
-            pb.directory(outputDirectory);
-            Process p = pb.start();
+            Process p = Runtime.getRuntime().exec(args.toArray(new String[0]), null, outputDirectory);
+            new Thread(new ProcessReader(p.getErrorStream(), true)).start();
+            new Thread(new ProcessReader(p.getInputStream(), false)).start();
 
             int val = p.waitFor();
+
         } catch (Exception e) {
             throw new MojoFailureException("Failed to run", e);
         }
